# mylibfaustembedded

./: CMakeLists.txt  CMakeLists0.txt  README.md  aarch64-toolchain.cmake  build-faust-aarch64.sh  build-faust.sh  config
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: lib.cpp  main.cpp  main0.cpp
